# mercury

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  SIMD_README.md  WEBGPU_README.md  build-emsdk.bat  build-linux.bat  build-windows.bat  build.bat  build.sh  dummy.js  imgui.ini  index.html  run_em.bat  testbed.cpp
TestBedUWP/: App.cpp  App.h  Package.appxmanifest  TestBedUWP.vcxproj  TestBedUWP.vcxproj.filters  TestBedUWPMain.cpp  TestBedUWPMain.h
TestBedUWP/Content/: Sample3DSceneRenderer.cpp  Sample3DSceneRenderer.h  ShaderStructures.h
editor/: CMakeLists.txt  slangdconfig.json
editor/include/: editor_main_window.h
editor/shaders/: engine.slang  slangdconfig.json
editor/src/: Asset.ixx  AssetImage.ixx  AssetShaderSet.ixx  AssetShaderSetImpl.ixx  AssetsBrowserWindow.ixx  EditorMain.ixx  EditorMainWindow.ixx  EditorOptions.ixx  EditorState.ixx  ImguiState.ixx  MProjectInternal.cpp  MProjectInternal.h  PersistentKeyValueStorage.ixx  Project.ixx  PropertyWindow.ixx  SceneHierarchyWindow.ixx  ShaderCompiler.ixx  ShellOS.ixx  editor_main.cpp  editor_main_window.cpp
editor/src/AssetsLoaders/: AssetsLoaderImageOpenImageIO.ixx  AssetsLoadersRegistry.ixx
engine/: CMakeLists.txt  version-info.h.in
engine/include/: mercury.h  mercury_api.h  mercury_application.h  mercury_canvas.h  mercury_embedded_shaders.h  mercury_entry_point.h  mercury_framegraph.h  mercury_geometry.h  mercury_input.h  mercury_log.h  mercury_memory.h  mercury_shader.h  mercury_simd.h  mercury_sound.h  mercury_ui.h  mercury_utils.h
engine/include/ll/: graphics.h  m_graphics.h  m_os.h  m_physic.h  os.h  physic.h  sound.h
engine/shaders/: dedicated_sprite.slang  dedicated_static_mesh.slang  mercury.slang  mercury_base.slang  mercury_shared.slang
engine/src/: application.cpp  application.h  canvas.cpp  canvas.h  framegraph.cpp  framegraph.h  geometry.cpp  graphics.cpp  graphics.h  graphics_format_utils.cpp  input.cpp  input.h  mercury_log.cpp  mercury_memory.cpp  mercury_string_utils.cpp
engine/src/imgui/: imgui_impl.cpp  imgui_impl.h  imgui_impl_graphics.cpp  imgui_impl_os.cpp  mercury_imgui.cpp  mercury_imgui.h
engine/src/ll/graphics/: ll_graphics.cpp  mercury_swapchain.cpp  mercury_swapchain.h
engine/src/ll/graphics/d3d12/: d3d12_command_list.cpp  d3d12_command_list.h  d3d12_graphics.cpp  d3d12_graphics.h  d3d12_render_target.cpp  d3d12_render_target.h  d3d12_swapchain.cpp  d3d12_utils.cpp  d3d12_utils.h  embedded_shaders_dxil.cpp
engine/src/ll/graphics/metal/: ebedded_shaders_metal.cpp  embedded_shaders_metal.cpp  metal_graphics.h  metal_impl.mm  metal_utils.cpp
engine/src/ll/graphics/null/: m_graphics_null.cpp  null_graphics.cpp
engine/src/ll/graphics/vulkan/: embedded_shaders_spirv.cpp  mercury_vulkan.cpp  mercury_vulkan.h  vk_adapter.cpp  vk_device.cpp  vk_device.h  vk_graphics.cpp  vk_graphics.h  vk_instance.cpp  vk_swapchain.cpp  vk_swapchain.h  vk_utils.cpp  vk_utils.h
engine/src/ll/graphics/webgpu/: embedded_shaders_wgsl.cpp  webgpu_graphics.cpp  webgpu_graphics.h  webgpu_utils.cpp  webgpu_utils.h
engine/src/ll/os/android/: android_input.cpp  android_input.h  android_os.cpp  android_utils.cpp
engine/src/ll/os/emscripten/: emscripten_input.cpp  emscripten_input.h  emscripten_os.cpp  emscripten_utils.cpp
engine/src/ll/os/linux/: linux_display_server.h  linux_input.cpp  linux_input.h  linux_os.cpp  linux_utils.cpp  linux_wayland.cpp
engine/src/ll/os/macos/: macos_input.cpp  macos_os.cpp  macos_os.mm  macos_utils.cpp
engine/src/ll/os/uwp/: uwp_input.cpp  uwp_os.cpp  uwp_utils.cpp
engine/src/ll/os/win32/: win32_input.cpp  win32_input.h  win32_os.cpp  win32_utils.cpp
engine/src/ll/sound/: mercury_ll_sound.h
engine/src/ll/sound/miniaudio/: sound_system_ma.cpp
engine/src/ll/sound/null/: sound_system_null.cpp
sample_project/: mproject.json
solutions/AndroidStudio/: settings.gradle.kts
solutions/AndroidStudio/app/: build.gradle.kts
solutions/AndroidStudio/app/src/main/: AndroidManifest.xml
solutions/AndroidStudio/app/src/main/cpp/: CMakeLists.txt
solutions/AndroidStudio/app/src/main/res/values/: strings.xml  themes.xml
solutions/AndroidStudio/app/src/main/res/values-night/: themes.xml
solutions/AndroidStudio/gradle/wrapper/: gradle-wrapper.properties
solutions/TestBed/: settings.gradle.kts
solutions/TestBed/app/: build.gradle.kts
solutions/TestBed/app/src/main/: AndroidManifest.xml
solutions/TestBed/app/src/main/cpp/: CMakeLists.txt  main.cpp
solutions/TestBed/app/src/main/res/values/: strings.xml  themes.xml
solutions/TestBed/app/src/main/res/values-night/: themes.xml
solutions/TestBed/gradle/wrapper/: gradle-wrapper.properties
solutions/VisualStudio2022/: imgui.ini  mercury.slnx  mercury.vcxproj  mercury.vcxproj.filters  testbed.vcxproj  testbed.vcxproj.filters
solutions/VisualStudio2022/testbed_apk/: build.gradle  fix_jni_libs.ps1
solutions/VisualStudio2022/testbed_apk/app/: build.gradle
solutions/VisualStudio2022/testbed_apk/app/src/main/: AndroidManifest.xml
solutions/VisualStudio2022/testbed_apk/app/src/main/cpp/: JniBindings.cpp
solutions/VisualStudio2026/: editor.aps  editor.vcxproj  editor.vcxproj.filters  imgui.ini  mercury.slnx  mercury.vcxproj  mercury.vcxproj.filters  mercury_shared.vcxitems  mercury_shared.vcxitems.filters  mercury_uwp.vcxproj  mercury_uwp.vcxproj.filters  resource.h  simple_example.h  testbed.vcxproj  testbed.vcxproj.filters  vcpkg_setup.md
solutions/VisualStudio2026/SimdJsonPlatground/: SimdJsonPlatground.vcxproj  SimdJsonPlatground.vcxproj.filters  SimdJsonPlayground.cpp
solutions/VisualStudio2026/TestBedAPK/: build.gradle
solutions/VisualStudio2026/TestBedAPK/app/: build.gradle
solutions/VisualStudio2026/TestBedAPK/app/src/main/cpp/: JniBindings.cpp
solutions/VisualStudio2026/TestBedAPK/gradle/wrapper/: gradle-wrapper.properties
solutions/VisualStudio2026/engine/include/ll/: graphics.h
solutions/VisualStudio2026/engine/src/: graphics.cpp
testbed_project/shaders/: slangdconfig.json  testbed.slang
www/: testbed.js  testbed.wasm
(+8 files in other folders)
